--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-XlsxWriter = "^3.0.3"
+pandas = "^1.4.2"
+openpyxl = "^3.0.10"
 
 [tool.poetry.dev-dependencies]
 
